fixed image slider when resized hopefully need to check on mobile

--- a/CSS/eventTwo.css
+++ b/CSS/eventTwo.css
@@ -279,17 +279,24 @@ h5{
 
 .sliderWrapper {
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   overflow: hidden;
 }
-.designerSliderContainer {
+.sliderWrapper .designerSliderContainer {
+  display: block;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
 }
-.designerSlides {
-  text-align: center;
+.designerSliderContainer .designerSlides {
   float: left;
+  list-style-type: none;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
-
-.designerSlides img {
+.designerSlides img{
   width: 320px;
   height: 400px;
 }
@@ -336,7 +343,12 @@ h5{
 .appoint a{
   color: #ef8e89;
 }
-
+.desktopMessage {
+  text-align: center;
+  width: 300px;
+  margin: 0 auto;
+  color: red;
+}
 
 
 
